--- a/style.css
+++ b/style.css
@@ -90,3 +90,8 @@ border-radius: 5px;
     font-weight: 700;
     padding: 0 10px;
   }
+  .scroll{
+    color: orangered;
+    height: 200px;
+    font-size: 50px;
+  }
